[workspace]
members = [
    "packages/hr",
    "packages/harness",
    "packages/patch-linker",
    "packages/some-lib",
    "packages/cargo-hotreload", "packages/hotreload-macro", "packages/binary-patch",
]
resolver = "2"

[workspace.dependencies]
base16 = "0.2.1"
digest = "0.10.7"
sha2 = "0.10.8"
serde_json = "1.0.61"
serde = "1.0.61"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[profile.dev]
debug = 0
strip = "debuginfo"

[profile.hotreload]
inherits = "dev"

[profile.dev.package."*"]
opt-level = 3
